# EVAutomation

./: LICENSE  README.md
computer_vision/focus_lane_detection/: CameraInfo.conf  InversePerspectiveMapping.cc  LaneDetector.cc  LaneDetector.hh  LaneDetectorOpt.c  LaneDetectorOpt.ggo  LaneDetectorOpt.h  Lanes.conf  Makefile  filters.m  focus_lane_detection.cbp  main.cc  run.sh
focus_controller_ws/src/focus_control/: CMakeLists.txt  package.xml
focus_controller_ws/src/focus_control/launch/: focus_control.launch  focus_sim.launch
focus_controller_ws/src/focus_control/msg/: input.msg  status.msg
focus_controller_ws/src/focus_control/src/: controller.cpp  desired_input.py  diff_flat_state_feedback.cpp  fake_gps_input.py  gps_input.py  kalman.py  lateral_controller.cpp  longitudinal_controller.cpp  simulator.py
focus_controller_ws/src/focus_control/src/old_files/: bpp_input.cpp  controller_old.cpp  controllerold.cpp  gps_data.mat  path_planner.cpp
focus_controller_ws/src/focus_control/src/old_files/EVAuto_files/: controller.cpp
focus_controller_ws/src/focus_serial/: CMakeLists.txt  package.xml
focus_controller_ws/src/focus_serial/msg/: serialMsg.msg
focus_controller_ws/src/focus_serial/src/: serial_transmitter.cpp
focus_controller_ws/src/pcan/: CMakeLists.txt  package.xml
focus_controller_ws/src/pcan/include/: common.h
focus_controller_ws/src/pcan/msg/: CANMsg.msg
focus_controller_ws/src/pcan/src/: common.cpp  runpcan.cpp
focus_controller_ws/src/swiftnav_piksi/: CHANGELOG.rst  CMakeLists.txt  README.md  mainpage.dox  package.xml
focus_controller_ws/src/swiftnav_piksi/config/: swiftnav_piksi_diag.yaml
focus_controller_ws/src/swiftnav_piksi/include/swiftnav_piksi/: piksi.h  piksi_driver.h
focus_controller_ws/src/swiftnav_piksi/launch/: swiftnav_piksi.launch
focus_controller_ws/src/swiftnav_piksi/msg/: fil.msg  loc.msg
focus_controller_ws/src/swiftnav_piksi/src/: piksi.c  piksi_driver.cpp  piksi_node.cpp
focus_controller_ws/src/swiftnav_piksi/src/old_files/: gps_input.py  kalman.py  location.cpp
microcontroller/focus_control/: can.c  can.h  focus_control.uvguix.acostley.xml  focus_control.uvguix.chasekunz.xml  focus_control.uvoptx  focus_control.uvprojx.xml  main.cpp
microcontroller/focus_control/Listings/: focus_control.map  startup_tm4c129.lst
microcontroller/focus_control/Objects/: can.crf  can.d  focus_control.axf  focus_control.build_log.htm  focus_control.htm  focus_control.lnp  focus_control_Target 1.dep  focus_control_focus_control.dep  main.crf  main.d  main2.crf  main2.d  main_saved.d  system_tm4c129.crf  system_tm4c129.d  uart_echo.crf  uart_echo.d
microcontroller/focus_control/RTE/: RTE_Components.h
microcontroller/focus_control/RTE/Device/TM4C1294NCPDT/: startup_TM4C129.s
